--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/favicon.png"
+                src="./assets/favicon.png"
                 alt="Project 2"
                 class="project-img"
               />
