--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/portfolio.png"
+                src="portfolio.jpg"
                 alt="Project 1"
                 class="project-img"
               />
@@ -315,7 +315,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="loading.jpg"
                 alt="Project 3"
                 class="project-img"
               />
