--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
+                  <h3>Tailwind CSS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
