--- a/index.html
+++ b/index.html
@@ -300,13 +300,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/SATHVIKRDY/CHAOS'"
+                onclick="location.href='https://github.com/SATHVIKRDY/Gaming-website-project'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://sathvikrdy.github.io/CHAOS/'"
+                onclick="location.href='https://sathvikrdy.github.io/Gaming-website-project/'"
               >
                 Live Demo
               </button>
