--- a/index.html
+++ b/index.html
@@ -315,22 +315,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="loading.jpg"
+                src="assets/project-3.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Merchandise-website</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/SATHVIKRDY/Merchandise-website-project'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://sathvikrdy.github.io/Merchandise-website-project/'"
               >
                 Live Demo
               </button>
