--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Merchandise-website</h2>
+            <h2 class="experience-sub-title project-title">Merch-website</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
