--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/SATHVIKRDY/Portfolio-Project'"
+                onclick="location.href='https://github.com/SATHVIKRDY/Portfolio'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://sathvikrdy.github.io/Portfolio-Project/'"
+                onclick="location.href='https://sathvikrdy.github.io/Portfolio/'"
               >
                 Live Demo
               </button>
