--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://sathvikrdy.github.io/Portfolio/'"
+                onclick="location.href='https://sathvikrdy.github.io/Portfolio'"
               >
                 Live Demo
               </button>
